--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,7 @@
     "app-banner-text-2": "Anytime, Anywhere",
     "app-banner-des": "Seamless payments anytime, anywhere. Effortlessly pay with our app.",
     "our-features": "Our features",
-    "our-features-title": "<innerText className='gradient'>Unlock the Power</innerText> of <newLine /> Seamless Global Payments",
+    "our-features-title": "<innerText>Unlock the Power</innerText> of <newLine /> Seamless Global Payments",
     "our-features-nfc": "NFC Menthod",
     "our-features-fast-transfer": "Fast fund transfers",
     "our-features-multi-currency": "Multi - currency support",
