--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -6,7 +6,7 @@
     "app-banner-text-2": "Quản lý kinh doanh toàn diện",
     "app-banner-des": "Nền tảng thanh toán hiện đại, chấp nhận mọi phương thức thanh toán",
     "our-features": "Tính năng của chúng tôi",
-    "our-features-title": "<innerText className='gradient'>Nền tảng thanh toán thông minh</innerText>  <newLine />chỉ với chiếc điện thoại thông minh của bạn",
+    "our-features-title": "<innerText>Nền tảng thanh toán thông minh</innerText>  <newLine />chỉ với chiếc điện thoại thông minh của bạn",
     "our-features-nfc": "Thanh toán không tiếp xúc",
     "our-features-fast-transfer": "Thanh toán quốc tế dễ dàng hơn",
     "our-features-multi-currency": "Rút tiền nhanh chóng",
