--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,7 @@
     "app-banner-text-2": "Anytime, Anywhere",
     "app-banner-des": "Seamless payments anytime, anywhere. Effortlessly pay with our app.",
     "our-features": "Our features",
-    "our-features-title": "<innerText>Unlock the Power</innerText> of <newLine /> Seamless Global Payments",
+    "our-features-title": "<innerText className='gradient'>Unlock the Power</innerText> of <newLine /> Seamless Global Payments",
     "our-features-nfc": "NFC Menthod",
     "our-features-fast-transfer": "Fast fund transfers",
     "our-features-multi-currency": "Multi - currency support",
@@ -99,11 +99,24 @@
     "resource": "Resource",
     "contact": "Contact",
     "footer-links": {
-        "accomplished": "Accomplished",
-        "active": "Accomplished",
-        "advantage": "Accomplished",
-        "authentic": "Authentic",
-        "ntf-anding": "NFT Landing"
+        "link1": "Accomplished",
+        "link2": "Accomplished",
+        "link3": "Accomplished",
+        "link4": "Authentic",
+        "link5": "NFT Landing",
+        "link6": "Accomplished",
+        "link7": "Accomplished",
+        "link8": "Accomplished",
+        "link9": "Authentic",
+        "link10": "NFT Landing",
+        "link11": "Accomplished",
+        "link12": "Accomplished",
+        "link13": "Accomplished",
+        "link14": "Authentic",
+        "link15": "NFT Landing",
+        "link16": "Accomplished",
+        "link17": "Authentic",
+        "link18": "NFT Landing"
     },
     "company-name": "© 2023 TAPTA TECHNOLOGY JOINT STOCK COMPANY",
     "copyright": "All rights reserved"
