--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -6,7 +6,7 @@
     "app-banner-text-2": "Quản lý kinh doanh toàn diện",
     "app-banner-des": "Nền tảng thanh toán hiện đại, chấp nhận mọi phương thức thanh toán",
     "our-features": "Tính năng của chúng tôi",
-    "our-features-title": "<innerText>Nền tảng thanh toán thông minh</innerText>  <newLine />chỉ với chiếc điện thoại thông minh của bạn",
+    "our-features-title": "<innerText className='gradient'>Nền tảng thanh toán thông minh</innerText>  <newLine />chỉ với chiếc điện thoại thông minh của bạn",
     "our-features-nfc": "Thanh toán không tiếp xúc",
     "our-features-fast-transfer": "Thanh toán quốc tế dễ dàng hơn",
     "our-features-multi-currency": "Rút tiền nhanh chóng",
@@ -99,11 +99,24 @@
     "resource": "Tài nguyên",
     "contact": "Liên hệ",
     "footer-links": {
-        "accomplished": "vi-Accomplished",
-        "active": "vi-Accomplished",
-        "advantage": "vi-Accomplished",
-        "authentic": "vi-Authentic",
-        "ntf-anding": "vi-NFT Landing"
+        "link1": "Accomplished",
+        "link2": "Accomplished",
+        "link3": "Accomplished",
+        "link4": "Authentic",
+        "link5": "NFT Landing",
+        "link6": "Accomplished",
+        "link7": "Accomplished",
+        "link8": "Accomplished",
+        "link9": "Authentic",
+        "link10": "NFT Landing",
+        "link11": "Accomplished",
+        "link12": "Accomplished",
+        "link13": "Accomplished",
+        "link14": "Authentic",
+        "link15": "NFT Landing",
+        "link16": "Accomplished",
+        "link17": "Authentic",
+        "link18": "NFT Landing"
     },
     "company-name": "© 2023 CÔNG TY CỔ PHẦN CÔNG NGHỆ TAPTA",
     "copyright": "All rights reserved"
