--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -99,24 +99,24 @@
     "resource": "Resource",
     "contact": "Contact",
     "footer-links": {
-        "link1": "Accomplished",
-        "link2": "Accomplished",
-        "link3": "Accomplished",
-        "link4": "Authentic",
-        "link5": "NFT Landing",
-        "link6": "Accomplished",
-        "link7": "Accomplished",
-        "link8": "Accomplished",
-        "link9": "Authentic",
-        "link10": "NFT Landing",
-        "link11": "Accomplished",
-        "link12": "Accomplished",
-        "link13": "Accomplished",
-        "link14": "Authentic",
-        "link15": "NFT Landing",
-        "link16": "Accomplished",
-        "link17": "Authentic",
-        "link18": "NFT Landing"
+        "link1": "Inventory Management",
+        "link2": "Billing",
+        "link3": "Management Business",
+        "link4": "Checkout",
+        "link5": "Smart Reporting",
+        "link6": "Cross border Payment",
+        "link7": "POS",
+        "link8": "Payment gateway",
+        "link9": "Solution",
+        "link10": "Our Story",
+        "link11": "Social responsibility",
+        "link12": "Board of Directors",
+        "link13": "Contact",
+        "link14": "Our Offices",
+        "link15": "Carrers",
+        "link16": "Our Partners",
+        "link17": "Customer Service",
+        "link18": "Academy"
     },
     "company-name": "© 2023 TAPTA TECHNOLOGY JOINT STOCK COMPANY",
     "copyright": "All rights reserved"
