--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -99,24 +99,24 @@
     "resource": "Tài nguyên",
     "contact": "Liên hệ",
     "footer-links": {
-        "link1": "Accomplished",
-        "link2": "Accomplished",
-        "link3": "Accomplished",
-        "link4": "Authentic",
-        "link5": "NFT Landing",
-        "link6": "Accomplished",
-        "link7": "Accomplished",
-        "link8": "Accomplished",
-        "link9": "Authentic",
-        "link10": "NFT Landing",
-        "link11": "Accomplished",
-        "link12": "Accomplished",
-        "link13": "Accomplished",
-        "link14": "Authentic",
-        "link15": "NFT Landing",
-        "link16": "Accomplished",
-        "link17": "Authentic",
-        "link18": "NFT Landing"
+        "link1": "Quản lý kho",
+        "link2": "Quản lý hoá đơn",
+        "link3": "Quản lý bán hàng",
+        "link4": "Thanh toán",
+        "link5": "Báo cáo thông minh",
+        "link6": "Thanh toán quốc tế",
+        "link7": "Cung cấp giải pháp POS",
+        "link8": "Dịch Vụ Cổng Thanh Toán",
+        "link9": "Tư vấn giải pháp bán hàng",
+        "link10": "Câu chuyện của chúng tôi",
+        "link11": "Phản hồi từ khách hàng",
+        "link12": "Hội đồng quản trị",
+        "link13": "Thông tin liên hệ",
+        "link14": "Các chi nhánh",
+        "link15": "Tuyển dụng",
+        "link16": "Các đối tác",
+        "link17": "Trợ giúp",
+        "link18": "Đào tạo"
     },
     "company-name": "© 2023 CÔNG TY CỔ PHẦN CÔNG NGHỆ TAPTA",
     "copyright": "All rights reserved"
