--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -119,5 +119,6 @@
         "link18": "Academy"
     },
     "company-name": "© 2023 TAPTA TECHNOLOGY JOINT STOCK COMPANY",
-    "copyright": "All rights reserved"
+    "copyright": "All rights reserved",
+    "register-successfully": "Register successfully! We'll contact you soon!"
 }
