--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -119,5 +119,6 @@
         "link18": "Đào tạo"
     },
     "company-name": "© 2023 CÔNG TY CỔ PHẦN CÔNG NGHỆ TAPTA",
-    "copyright": "All rights reserved"
+    "copyright": "All rights reserved",
+    "register-successfully": "Đăng ký thành công! Chúng tôi sẽ liên lạc với bạn trong thời gian sớm nhất!"
 }
